# rust-cancellation

./: Cargo.toml  LICENSE.txt  Makefile  README.md  index.html  lib.rs
doc/: search-index.js
doc/cancellation/: index.html  sidebar-items.js  struct.CancellationToken.html  struct.CancellationTokenSource.html  struct.OperationCanceled.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
doc/implementors/core/ops/: trait.Deref.js
doc/implementors/std/error/: trait.Error.js
doc/src/cancellation/: lib.rs.html
